# bevy_brp_tool

./: Cargo.toml  README.md
.github/workflows/: ci.yml
help_text_files/: agent.txt  app.txt  brp.txt  cleanup_logs.txt  destroy.txt  detached.txt  get.txt  get_resource.txt  get_watch.txt  help.txt  info.txt  insert.txt  insert_resource.txt  list.txt  list_entities.txt  list_entity.txt  list_resources.txt  list_watch.txt  managed_commands.txt  methods.txt  mutate_component.txt  mutate_resource.txt  port.txt  profile.txt  query.txt  raw.txt  ready.txt  remove.txt  remove_resource.txt  reparent.txt  schema.txt  screenshot.txt  shutdown.txt  spawn.txt  workflows.txt
src/: lib.rs  main.rs  plugin.rs
src/cli/: cargo_detector.rs  cli_client.rs  client.rs  constants.rs  detached.rs  error_formatter.rs  help.rs  help_builder.rs  managed.rs  mod.rs  rpc_params_builder.rs  sse.rs
src/cli/commands/: cli.rs  execution.rs  mod.rs  parsing.rs  types.rs
src/cli/support/: app_detection.rs  binary_discovery.rs  entity.rs  json.rs  mod.rs  polling.rs  port_utils.rs
tests/: basic_tests.rs  binary_discovery_tests.rs  command_parsing_tests.rs  component_tests.rs  entity_tests.rs  error_tests.rs  hierarchy_tests.rs  profile_tests.rs  query_tests.rs  resource_tests.rs  special_tests.rs  support.rs  watch_tests.rs
