[package]
name = "bevy_brp_tool"
version = "0.1.0"
edition = "2024"
authors = ["natepiano <slicks.curable.0k@icloud.com>"]
description = "A CLI tool for interacting with Bevy apps via the Bevy Remote Protocol, designed for agentic coding tools and automated testing"
readme = "README.md"
repository = "https://github.com/natepiano/bevy_brp_tool"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "remote", "debugging", "cli"]
categories = ["command-line-utilities", "development-tools", "game-development", "development-tools::debugging"]

[[bin]]
name = "brp"
path = "src/main.rs"

[lints.rust]
missing_docs = "deny"

[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.1", features = ["bevy_remote"] }
bytes = "1.10.1"
cargo_metadata = "0.20.0"
clap = { version = "4.5.39", features = ["derive"] }
rand = "0.9.1"
reqwest = { version = "0.12.19", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.35.2"
tokio = { version = "1.45.1", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.20.0"
